--- a/yamls/check.yaml
+++ b/yamls/check.yaml
@@ -1,4 +1,4 @@
 [k8s]
-kmaster   ansible_host=172.16.16.100
-kworker1  ansible_host=172.16.16.101
-kworker2  ansible_host=172.16.16.102
+kmaster   ansible_host=172.16.16.100 ansible_host_key_checking=false
+kworker1  ansible_host=172.16.16.101 ansible_host_key_checking=false
+kworker2  ansible_host=172.16.16.102 ansible_host_key_checking=false
